# cargo-patch-test

./: Cargo.toml
src/: lib.rs
