[package]
name = "cargo-patch-test"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-robotics.com>"]

[dependencies]
cargo-patch-test-dependency = { git = "https://github.com/hannobraun/cargo-patch-test-original-dependency.git" }
cargo-patch-test-other-dependency = { git = "https://github.com/hannobraun/cargo-patch-test-other-dependency.git" }

[patch."https://github.com/hannobraun/cargo-patch-test-original-dependency.git"]
cargo-patch-test-dependency = { git = "https://github.com/hannobraun/cargo-patch-test-override-dependency.git" }
